添加了应用程序图标"Convert.ico"

--- a/images.qrc
+++ b/images.qrc
@@ -7,5 +7,6 @@
         <file>images/start.png</file>
         <file>images/stop.png</file>
         <file>images/update.png</file>
+        <file>images/Convert.ico</file>
     </qresource>
 </RCC>
