--- a/portdialog.ui
+++ b/portdialog.ui
@@ -7,16 +7,10 @@
     <x>0</x>
     <y>0</y>
     <width>490</width>
-    <height>415</height>
+    <height>431</height>
    </rect>
   </property>
   <property name="minimumSize">
-   <size>
-    <width>490</width>
-    <height>415</height>
-   </size>
-  </property>
-  <property name="maximumSize">
    <size>
     <width>490</width>
     <height>415</height>
@@ -46,14 +40,14 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>30</x>
       <y>30</y>
-      <width>61</width>
+      <width>71</width>
       <height>19</height>
      </rect>
     </property>
     <property name="text">
-     <string>串口名：</string>
+     <string> 串口名：</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit_serialportName">
@@ -70,7 +64,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>11</pointsize>
+      <pointsize>10</pointsize>
      </font>
     </property>
     <property name="readOnly">
@@ -130,27 +124,27 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>30</x>
       <y>80</y>
-      <width>61</width>
+      <width>71</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>加速度：</string>
+     <string> 加速度：</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>30</x>
       <y>120</y>
-      <width>61</width>
+      <width>71</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>减速度：</string>
+     <string> 减速度：</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit_SP">
@@ -350,7 +344,7 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>360</y>
+     <y>380</y>
      <width>70</width>
      <height>28</height>
     </rect>
@@ -369,7 +363,7 @@
    <property name="geometry">
     <rect>
      <x>280</x>
-     <y>360</y>
+     <y>380</y>
      <width>70</width>
      <height>28</height>
     </rect>
@@ -388,7 +382,7 @@
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>360</y>
+     <y>380</y>
      <width>70</width>
      <height>28</height>
     </rect>
@@ -407,9 +401,9 @@
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>260</y>
+     <y>270</y>
      <width>201</width>
-     <height>81</height>
+     <height>91</height>
     </rect>
    </property>
    <property name="font">
@@ -425,7 +419,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>43</y>
+      <y>50</y>
       <width>151</width>
       <height>25</height>
      </rect>
@@ -456,7 +450,7 @@
      </font>
     </property>
     <property name="text">
-     <string>当前位置：</string>
+     <string> 当前位置：</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_13">
@@ -489,6 +483,57 @@
       <width>61</width>
       <height>20</height>
      </rect>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QGroupBox" name="groupBox_motor">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>270</y>
+     <width>211</width>
+     <height>91</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string/>
+   </property>
+   <widget class="QCheckBox" name="checkBox_motor_connected">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>50</y>
+      <width>171</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>微软雅黑</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>连接电机，进行探测</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>15</y>
+      <width>101</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>微软雅黑</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>单一方向采集</string>
     </property>
    </widget>
   </widget>
