修改了线程与保护功能（未测试），其中最大转速保存功能暂未实现！！！

--- a/images.qrc
+++ b/images.qrc
@@ -8,5 +8,6 @@
         <file>images/stop.png</file>
         <file>images/update.png</file>
         <file>images/Convert.ico</file>
+        <file>images/port.png</file>
     </qresource>
 </RCC>
