--- a/portdialog.ui
+++ b/portdialog.ui
@@ -19,6 +19,10 @@
   <property name="windowTitle">
    <string>串口</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="images.qrc">
+    <normaloff>:/images/port.png</normaloff>:/images/port.png</iconset>
+  </property>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
@@ -538,6 +542,8 @@
    </widget>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="images.qrc"/>
+ </resources>
  <connections/>
 </ui>
