--- a/paradialog.ui
+++ b/paradialog.ui
@@ -57,7 +57,7 @@
     </font>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>2</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -219,7 +219,7 @@
      <property name="geometry">
       <rect>
        <x>150</x>
-       <y>40</y>
+       <y>20</y>
        <width>61</width>
        <height>21</height>
       </rect>
@@ -232,7 +232,7 @@
      <property name="geometry">
       <rect>
        <x>220</x>
-       <y>41</y>
+       <y>21</y>
        <width>61</width>
        <height>20</height>
       </rect>
@@ -242,7 +242,7 @@
      <property name="geometry">
       <rect>
        <x>280</x>
-       <y>40</y>
+       <y>20</y>
        <width>21</width>
        <height>21</height>
       </rect>
@@ -255,7 +255,7 @@
      <property name="geometry">
       <rect>
        <x>110</x>
-       <y>80</y>
+       <y>60</y>
        <width>221</width>
        <height>111</height>
       </rect>
@@ -340,9 +340,9 @@
      <property name="geometry">
       <rect>
        <x>110</x>
-       <y>220</y>
+       <y>180</y>
        <width>221</width>
-       <height>111</height>
+       <height>161</height>
       </rect>
      </property>
      <property name="title">
@@ -355,7 +355,7 @@
       <property name="geometry">
        <rect>
         <x>110</x>
-        <y>71</y>
+        <y>81</y>
         <width>71</width>
         <height>20</height>
        </rect>
@@ -365,7 +365,7 @@
       <property name="geometry">
        <rect>
         <x>110</x>
-        <y>31</y>
+        <y>41</y>
         <width>71</width>
         <height>20</height>
        </rect>
@@ -375,7 +375,7 @@
       <property name="geometry">
        <rect>
         <x>25</x>
-        <y>30</y>
+        <y>40</y>
         <width>81</width>
         <height>21</height>
        </rect>
@@ -388,13 +388,49 @@
       <property name="geometry">
        <rect>
         <x>25</x>
-        <y>70</y>
+        <y>80</y>
         <width>81</width>
         <height>21</height>
        </rect>
       </property>
       <property name="text">
        <string>圆周数：</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_SP">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>120</y>
+        <width>71</width>
+        <height>20</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_8">
+      <property name="geometry">
+       <rect>
+        <x>28</x>
+        <y>120</y>
+        <width>81</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>最高转速：</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_22">
+      <property name="geometry">
+       <rect>
+        <x>180</x>
+        <y>120</y>
+        <width>31</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string> °/s</string>
       </property>
      </widget>
     </widget>
@@ -1246,6 +1282,9 @@
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_save">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="geometry">
     <rect>
      <x>29</x>
