采集开始后左侧显示即将存储内容；双通道可选择存储一个或两个文件；在工具栏添加串口快捷键

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -44,7 +44,6 @@
      <string>文件</string>
     </property>
     <addaction name="action_open"/>
-    <addaction name="action_saveAs"/>
     <addaction name="separator"/>
     <addaction name="action_view"/>
    </widget>
@@ -104,9 +103,9 @@
    <addaction name="action_searchDevice"/>
    <addaction name="separator"/>
    <addaction name="action_open"/>
-   <addaction name="action_saveAs"/>
    <addaction name="separator"/>
    <addaction name="action_set"/>
+   <addaction name="action_serialport"/>
    <addaction name="separator"/>
    <addaction name="action_start"/>
    <addaction name="action_stop"/>
