更改了进行采集时的串口命令发送函数

--- a/portdialog.ui
+++ b/portdialog.ui
@@ -271,7 +271,7 @@
      <string>逆时针</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_opposite">
+   <widget class="QPushButton" name="pushButton_relative">
     <property name="geometry">
      <rect>
       <x>20</x>
