增加了单通道连续采集、以及外部触发方式的采集；添加了数据显示设置功能的对话框

--- a/images.qrc
+++ b/images.qrc
@@ -9,5 +9,6 @@
         <file>images/update.png</file>
         <file>images/Convert.ico</file>
         <file>images/port.png</file>
+        <file>images/plotView.png</file>
     </qresource>
 </RCC>
