--- a/informationleft.ui
+++ b/informationleft.ui
@@ -190,6 +190,9 @@
    </property>
   </widget>
   <widget class="QwtDial" name="Dial">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="geometry">
     <rect>
      <x>25</x>
