--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1280</width>
-    <height>720</height>
+    <width>1200</width>
+    <height>675</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>1280</width>
-    <height>720</height>
+    <width>1200</width>
+    <height>675</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -25,7 +25,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1280</width>
+     <width>1200</width>
      <height>25</height>
     </rect>
    </property>
@@ -106,6 +106,7 @@
    <addaction name="separator"/>
    <addaction name="action_set"/>
    <addaction name="action_serialport"/>
+   <addaction name="action_view"/>
    <addaction name="separator"/>
    <addaction name="action_start"/>
    <addaction name="action_stop"/>
@@ -155,11 +156,15 @@
    </property>
   </action>
   <action name="action_view">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/images/plotView.png</normaloff>:/images/plotView.png</iconset>
+   </property>
    <property name="text">
-    <string>视图(&amp;V)</string>
+    <string>数据显示(&amp;V)</string>
    </property>
    <property name="toolTip">
-    <string>视图</string>
+    <string>数据显示</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+W</string>
@@ -242,10 +247,10 @@
     <string>搜索设备</string>
    </property>
    <property name="toolTip">
-    <string>搜索并连接设备</string>
+    <string>搜索并连接采集卡设备</string>
    </property>
    <property name="statusTip">
-    <string>搜索采集卡设备并连接</string>
+    <string>搜索并连接采集卡设备</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+F</string>
