--- a/paradialog.ui
+++ b/paradialog.ui
@@ -56,8 +56,11 @@
      <pointsize>12</pointsize>
     </font>
    </property>
+   <property name="toolTip">
+    <string/>
+   </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>2</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -442,9 +445,9 @@
     <widget class="QGroupBox" name="groupBox_3">
      <property name="geometry">
       <rect>
-       <x>40</x>
+       <x>18</x>
        <y>20</y>
-       <width>351</width>
+       <width>151</width>
        <height>121</height>
       </rect>
      </property>
@@ -454,106 +457,47 @@
      <widget class="QRadioButton" name="radioButton_doubleCh">
       <property name="geometry">
        <rect>
-        <x>20</x>
+        <x>17</x>
         <y>80</y>
         <width>171</width>
         <height>21</height>
        </rect>
       </property>
       <property name="text">
-       <string>双通道（通道A和B）</string>
+       <string>双通道（AB）</string>
       </property>
      </widget>
      <widget class="QRadioButton" name="radioButton_singleCh">
       <property name="geometry">
        <rect>
-        <x>20</x>
+        <x>17</x>
         <y>40</y>
         <width>141</width>
         <height>21</height>
        </rect>
       </property>
       <property name="text">
-       <string>单通道（通道A）</string>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lineEdit_triggerLevel">
-      <property name="geometry">
-       <rect>
-        <x>270</x>
-        <y>42</y>
-        <width>61</width>
-        <height>20</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_12">
-      <property name="geometry">
-       <rect>
-        <x>190</x>
-        <y>40</y>
-        <width>81</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>触发电平：</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_17">
-      <property name="geometry">
-       <rect>
-        <x>190</x>
-        <y>80</y>
-        <width>81</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>触发延迟：</string>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lineEdit_triggerHoldOffSamples">
-      <property name="geometry">
-       <rect>
-        <x>270</x>
-        <y>82</y>
-        <width>61</width>
-        <height>20</height>
-       </rect>
+       <string>单通道（A）</string>
       </property>
      </widget>
     </widget>
     <widget class="QGroupBox" name="groupBox_4">
      <property name="geometry">
       <rect>
-       <x>40</x>
+       <x>188</x>
        <y>150</y>
-       <width>351</width>
-       <height>191</height>
+       <width>221</width>
+       <height>201</height>
       </rect>
      </property>
      <property name="title">
       <string>采样参数</string>
      </property>
-     <widget class="QLabel" name="label_11">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>150</y>
-        <width>151</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string> 单方向累积脉冲数：</string>
-      </property>
-     </widget>
      <widget class="QLabel" name="label_31">
       <property name="geometry">
        <rect>
-        <x>80</x>
-        <y>70</y>
+        <x>20</x>
+        <y>78</y>
         <width>81</width>
         <height>21</height>
        </rect>
@@ -565,8 +509,8 @@
      <widget class="QLabel" name="label_10">
       <property name="geometry">
        <rect>
-        <x>80</x>
-        <y>110</y>
+        <x>20</x>
+        <y>118</y>
         <width>81</width>
         <height>21</height>
        </rect>
@@ -578,19 +522,19 @@
      <widget class="QLineEdit" name="lineEdit_plsAccNum">
       <property name="geometry">
        <rect>
-        <x>160</x>
-        <y>152</y>
-        <width>91</width>
-        <height>20</height>
+        <x>115</x>
+        <y>158</y>
+        <width>81</width>
+        <height>23</height>
        </rect>
       </property>
      </widget>
      <widget class="QLineEdit" name="lineEdit_detRange">
       <property name="geometry">
        <rect>
-        <x>160</x>
-        <y>72</y>
-        <width>91</width>
+        <x>100</x>
+        <y>80</y>
+        <width>61</width>
         <height>20</height>
        </rect>
       </property>
@@ -598,8 +542,8 @@
      <widget class="QLabel" name="label_9">
       <property name="geometry">
        <rect>
-        <x>80</x>
-        <y>30</y>
+        <x>20</x>
+        <y>38</y>
         <width>81</width>
         <height>21</height>
        </rect>
@@ -614,9 +558,9 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>160</x>
-        <y>112</y>
-        <width>91</width>
+        <x>100</x>
+        <y>120</y>
+        <width>96</width>
         <height>20</height>
        </rect>
       </property>
@@ -624,8 +568,8 @@
      <widget class="QLabel" name="label_32">
       <property name="geometry">
        <rect>
-        <x>250</x>
-        <y>72</y>
+        <x>161</x>
+        <y>80</y>
         <width>31</width>
         <height>21</height>
        </rect>
@@ -637,8 +581,8 @@
      <widget class="QLabel" name="label_23">
       <property name="geometry">
        <rect>
-        <x>250</x>
-        <y>30</y>
+        <x>161</x>
+        <y>38</y>
         <width>41</width>
         <height>21</height>
        </rect>
@@ -650,9 +594,9 @@
      <widget class="QComboBox" name="comboBox_sampleFreq">
       <property name="geometry">
        <rect>
-        <x>160</x>
-        <y>30</y>
-        <width>91</width>
+        <x>100</x>
+        <y>38</y>
+        <width>61</width>
         <height>22</height>
        </rect>
       </property>
@@ -710,6 +654,215 @@
        </property>
       </item>
      </widget>
+     <widget class="QPushButton" name="pushButton">
+      <property name="geometry">
+       <rect>
+        <x>15</x>
+        <y>157</y>
+        <width>96</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="toolTip">
+       <string>设置最大单次脉冲数</string>
+      </property>
+      <property name="text">
+       <string>单次脉冲数:</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QGroupBox" name="groupBox_8">
+     <property name="geometry">
+      <rect>
+       <x>188</x>
+       <y>20</y>
+       <width>221</width>
+       <height>121</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>触发设置</string>
+     </property>
+     <widget class="QLabel" name="label_14">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>40</y>
+        <width>81</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>触发方式：</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBox_trig_mode">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>40</y>
+        <width>103</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+       </font>
+      </property>
+      <item>
+       <property name="text">
+        <string>电平触发</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>外部触发</string>
+       </property>
+      </item>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_trigLevel_OR_holdOff">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>82</y>
+        <width>66</width>
+        <height>20</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_level_OR_holdOff">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>80</y>
+        <width>65</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>触发电平</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_conversion">
+      <property name="geometry">
+       <rect>
+        <x>170</x>
+        <y>80</y>
+        <width>34</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="toolTip">
+       <string>转换成其他单位</string>
+      </property>
+      <property name="text">
+       <string>LSB</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_12">
+      <property name="geometry">
+       <rect>
+        <x>84</x>
+        <y>80</y>
+        <width>15</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>：</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QGroupBox" name="groupBox_9">
+     <property name="geometry">
+      <rect>
+       <x>18</x>
+       <y>150</y>
+       <width>151</width>
+       <height>201</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>定时设置</string>
+     </property>
+     <widget class="QLabel" name="label_15">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>40</y>
+        <width>101</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>方向间间隔：</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_direct_interval">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>80</y>
+        <width>71</width>
+        <height>20</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_17">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>80</y>
+        <width>21</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string> s</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_27">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>120</y>
+        <width>91</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>圆周间间隔：</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_circle_interval">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>160</y>
+        <width>71</width>
+        <height>20</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_28">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>160</y>
+        <width>41</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string> min</string>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QWidget" name="tab_4">
@@ -736,6 +889,9 @@
         <width>61</width>
         <height>21</height>
        </rect>
+      </property>
+      <property name="toolTip">
+       <string>选择其他文件路径</string>
       </property>
       <property name="text">
        <string>. . .      </string>
@@ -1043,7 +1199,7 @@
      <rect>
       <x>20</x>
       <y>110</y>
-      <width>111</width>
+      <width>101</width>
       <height>21</height>
      </rect>
     </property>
@@ -1056,7 +1212,7 @@
      </font>
     </property>
     <property name="text">
-     <string>预估单文件量：</string>
+     <string>单次数据量：</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_43">
@@ -1144,9 +1300,9 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>120</x>
       <y>111</y>
-      <width>71</width>
+      <width>81</width>
       <height>21</height>
      </rect>
     </property>
@@ -1230,27 +1386,6 @@
     </property>
     <property name="text">
      <string> M</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_triggerHoldOffTime">
-    <property name="geometry">
-     <rect>
-      <x>240</x>
-      <y>70</y>
-      <width>161</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>微软雅黑</family>
-      <pointsize>12</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string/>
     </property>
    </widget>
   </widget>
@@ -1360,6 +1495,9 @@
    </property>
    <property name="text">
     <string>重置</string>
+   </property>
+   <property name="checkable">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
