--- a/portdialog.ui
+++ b/portdialog.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>串口</string>
+   <string>扫描电机设置</string>
   </property>
   <property name="windowIcon">
    <iconset resource="images.qrc">
