解决了“设置到最大脉冲数时无法采集”的问题

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -88,6 +88,9 @@
    <addaction name="menu_4"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
+   <property name="windowTitle">
+    <string>工具栏</string>
+   </property>
    <property name="iconSize">
     <size>
      <width>32</width>
