--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -82,6 +82,7 @@
      <string>帮助</string>
     </property>
     <addaction name="action_help"/>
+    <addaction name="action_about"/>
    </widget>
    <addaction name="menu"/>
    <addaction name="menu_2"/>
@@ -229,8 +230,12 @@
    </property>
   </action>
   <action name="action_help">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/images/help.png</normaloff>:/images/help.png</iconset>
+   </property>
    <property name="text">
-    <string>帮助(&amp;H)</string>
+    <string>帮助(&amp;W)</string>
    </property>
    <property name="toolTip">
     <string>帮助</string>
@@ -239,7 +244,7 @@
     <string>帮助</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+L</string>
+    <string>Ctrl+W</string>
    </property>
   </action>
   <action name="action_searchDevice">
@@ -287,6 +292,11 @@
    </property>
    <property name="text">
     <string>采集说明</string>
+   </property>
+  </action>
+  <action name="action_about">
+   <property name="text">
+    <string>关于...</string>
    </property>
   </action>
  </widget>
