--- a/informationleft.ui
+++ b/informationleft.ui
@@ -71,7 +71,7 @@
     <rect>
      <x>20</x>
      <y>330</y>
-     <width>231</width>
+     <width>225</width>
      <height>23</height>
     </rect>
    </property>
@@ -86,6 +86,18 @@
      <family>微软雅黑</family>
      <pointsize>10</pointsize>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QProgressBar::chunk {
+   background-color: #2077d4;
+   width: 20px;
+}
+
+QProgressBar {
+   border: 1px solid grey;
+   border-radius: 0px;
+   text-align: center;
+}</string>
    </property>
    <property name="value">
     <number>10</number>
@@ -204,7 +216,7 @@
    <property name="font">
     <font>
      <family>微软雅黑</family>
-     <pointsize>8</pointsize>
+     <pointsize>9</pointsize>
     </font>
    </property>
    <property name="lowerBound">
